<resources>
    <string name="app_name">AlgorithmManagement</string>
    <string name="FragmentDefaultText">this is MainFragment</string>
    <string name="solvedProblemUserId">solved_by:%s</string>
    <string name="solvedacToken">solvedacToken=%s</string>
    <string name="callAPI">클래스번호 호출</string>
    <string name="callSolvedAPI">내가 푼 문제</string>
    <string name="login">로그인</string>
    <string name="firbaseTest">firebase</string>
    <string name="sharedTest">shared</string>
    <string name="idea">idea</string>
    <string name="date">date</string>
    <string name="comment">comment</string>
    <string name="seach">search</string>
    <string name="prefGetUserId">UserId</string>
    <string name="default_user">Default_User</string>
    <string name="default_problemId">1110</string>
    <string name="default_count">30</string>
    <string name="objectIsNull">%s가 존재하지 않습니다.</string>
    <string name="generateTable">%s를 firebase의 새 table로 생성합니다.</string>
    <string name="existDataOnFirebase">firebase %s에 이미 존재하는 데이터입니다.</string>


    //firebase
    <string name="userTable">UserTable</string>
    <string name="ideaTable">IdeaTable</string>
    <string name="dateTable">DateTable</string>
    <string name="commentTable">CommentTable</string>
    <string name="childCommentTable">ChildCommentTable</string>
    <string name="tipTable">TipTable</string>
    <string name="show_problem_link"><u>문제보기</u></string>

    <!-- 임시. 바뀔수 있음 -->
    <string name="splash_string">AMA</string>
    <string name="sign_up_text">AMA 는 Solved.ac API를 이용을 합니다.\n앱을 이용하기 위해서는 아래 \'Solved.ac 연동하러가기\' 을 클릭하여 백준 홈페이지에서 Solved.ac를 연동해주세요\n\n연동이 끝나면 우측 상단의 닫기를 클릭해주세요.\n\n이미 연동 이력이 있는 사용자도 꼭 로그인을 한 다음 닫기버튼을 눌러주세요.</string>

    <string name="view_problem_info_loading">loading…</string>
    <string name="view_problem_info_top_title">#%s %s</string>
    <string name="view_problem_info_category">문제 카테고리(태그)\n\t\t%s</string>
    <string name="view_problem_info_avg_try_count">평균 시도 횟수\n\t\t%s</string>
    <string name="view_problem_info_problem_level">문제 난이도\n\t\t%s</string>
    <string name="view_problem_info_success_count">맞은 사람 수\n\t\t%s</string>

</resources>